syntax = "proto3";

package views;
option csharp_namespace = "EntranceMonitor.ViewModels";


message FrameView {
  string id = 1;
  uint64 timestamp = 2;
  bytes  frame_data = 3;
  optional string extension = 4;
}